--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/icon.png",
-		"userInterfaceStyle": "dark-mode",
+		"userInterfaceStyle": "dark",
 		"backgroundColor": "#1e1e1e",
 		"primaryColor": "#0DC29C",
 		"splash": {
@@ -26,7 +26,8 @@
 				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#00A884"
 			},
-			"backgroundColor": "#1E1E1E"
+			"backgroundColor": "#1E1E1E",
+			"package": "com.igorroc.caroninha"
 		},
 		"web": {
 			"favicon": "./assets/favicon.png"
