--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6",
     "expo-system-ui": "~1.3.0",
-    "@expo/webpack-config": "^0.17.0"
+    "@expo/webpack-config": "^0.17.0",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
