[style]: Android bottom bar

--- a/app.json
+++ b/app.json
@@ -35,6 +35,10 @@
 		"androidStatusBar": {
 			"barStyle": "dark-content",
 			"backgroundColor": "#00A884"
+		},
+		"androidNavigationBar":{
+			"barStyle": "dark-content",
+			"backgroundColor": "#151414"
 		}
 	}
 }
