--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "caroninha",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
 		"start": "expo start",
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@expo-google-fonts/mitr": "^0.2.2",
 		"@expo/vector-icons": "^13.0.0",
+		"@expo/webpack-config": "^0.17.0",
+		"@react-native-community/datetimepicker": "^6.5.2",
 		"@react-navigation/bottom-tabs": "^6.4.0",
 		"@react-navigation/native": "^6.0.13",
 		"@react-navigation/native-stack": "^6.9.1",
@@ -19,16 +21,15 @@
 		"expo-linear-gradient": "~11.4.0",
 		"expo-splash-screen": "~0.16.2",
 		"expo-status-bar": "~1.4.0",
+		"expo-system-ui": "~1.3.0",
+		"expo-updates": "~0.14.6",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-native": "0.69.6",
 		"react-native-safe-area-context": "4.3.1",
 		"react-native-screens": "~3.15.0",
 		"react-native-web": "~0.18.7",
-		"styled-components": "^5.3.6",
-		"expo-system-ui": "~1.3.0",
-		"@expo/webpack-config": "^0.17.0",
-		"expo-updates": "~0.14.6"
+		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
