--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.2.0",
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
-		"start": "expo start",
+		"start": "npx expo start",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web"
@@ -12,7 +12,7 @@
 		"@expo-google-fonts/mitr": "^0.2.2",
 		"@expo/vector-icons": "^13.0.0",
 		"@expo/webpack-config": "^0.17.0",
-		"@react-native-community/datetimepicker": "^6.5.2",
+		"@react-native-community/datetimepicker": "6.2.0",
 		"@react-navigation/bottom-tabs": "^6.4.0",
 		"@react-navigation/native": "^6.0.13",
 		"@react-navigation/native-stack": "^6.9.1",
