--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
 	"useTabs": true,
 	"semi": false,
 	"singleQuote": false,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"bracketSpacing": true
 }
