--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.16",
     "expo-auth-session": "~3.7.1",
     "expo-font": "~10.2.0",
@@ -38,7 +39,9 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/styled-components-react-native": "^5.1.3",
+    "react-native-dotenv": "^3.4.8",
     "typescript": "~4.3.5"
   },
   "private": true
