--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-system-ui": "~1.3.0",
     "expo-updates": "~0.14.6",
     "expo-web-browser": "~11.0.0",
+    "fs": "^0.0.1-security",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
