--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
+    "react-native-autocomplete-dropdown": "^2.1.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
